--- a/Html Css/OfekTwitter/index.html
+++ b/Html Css/OfekTwitter/index.html
@@ -31,22 +31,30 @@
                 </div>
             </form>
 
-            <div class="tweets">
-                <img src="image/user.jpg">
-                James Bond says:
-                <p>Hello world</p>
-                <div class="tweets">
-                    <img src="image/user.jpg">
-                    James Bond says:
-                    <p>Hello world</p>
-                    <div class="tweets">
-                        <img src="image/user.jpg">
-                        James Bond says:
-                        <p>Hello world</p>
-                        <div class="tweets">
-                            <img src="image/user.jpg">
-                            James Bond says:
-                            <p>Hello world</p>
+            <div class="media tweets">
+                <img src="image/1.jpg">
+                <div class="media-body">
+                    Sir 1 says:
+                    <p>Hello world!</p>
+                    <div class="media">
+                        <img src="image/4.jpg">
+                        <div class="media-body">
+                            The Honourable 9 says:
+                            <p>Indeed.</p>
+                            <div class="media">
+                                <img src="image/5.jpg">
+                                <div class="media-body">
+                                    Lord 5 says:
+                                    <p>Mighty fine!</p>
+                                    <div class="media">
+                                        <img src="image/4.jpg">
+                                        <div class="media-body">
+                                            Rabbi 4 says:
+                                            <p>That's not kosher...</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -55,7 +63,7 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="text-muted">Ofek Twitter</div>
+                <div class="text-muted">Ofek Twitter - with Twitter Bootstrap v4</div>
             </div>
         </footer>
 
