--- a/Html Css/OfekTwitter/users.html
+++ b/Html Css/OfekTwitter/users.html
@@ -23,112 +23,116 @@
             </div>
         </nav>
 
-        <main class="container column" role="main" >
-            <form>
-                    <span>Filter by </span>
-                    <input type="text" placeholder="user name" name="username">
-                    <input class="btn btn-primary" type="submit" value="ok">
-            </form>
+        <main class="container" role="main" >
+            <div class="row">
+                <form>
+                        <span>Filter by </span>
+                        <input type="text" placeholder="user name" name="username">
+                        <input class="btn btn-primary" type="submit" value="ok">
+                </form>
 
-            <div class=" col-sm-9">
-                <div class="container content userlist row">
-
-                    <div class="col-sm-3">
-                        <img src="image/1.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                <div class="col-sm-9">
+                    <div class="container content userlist row">
+                        <div class="col-sm-3">
+                            <img src="image/1.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Sir 1</p>
                         </div>
-                        <p>User 1</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/2.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/2.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Chancellor 2</p>
                         </div>
-                        <p>User 2</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/3.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/3.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Doctor 3</p>
                         </div>
-                        <p>User 3</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/4.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/4.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Rabbi 4</p>
                         </div>
-                        <p>User 2</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/5.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/5.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Lord 5</p>
                         </div>
-                        <p>User 3</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/1.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/1.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>His Excellency 6</p>
                         </div>
-                        <p>User 1</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/2.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/2.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>President 7</p>
                         </div>
-                        <p>User 2</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/3.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/3.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>King 8</p>
                         </div>
-                        <p>User 3</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/4.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/4.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>The Honourable 9</p>
                         </div>
-                        <p>User 2</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/5.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col-sm-3">
+                            <img src="image/5.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Professor 10</p>
                         </div>
-                        <p>User 3</p>
                     </div>
                 </div>
-            </div>
 
-            <div class=" col-sm-3">
-                <div class="container content userlist row">
-                        
-                    <div class="col-sm-3">
-                        <img src="image/1.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                <div class="col-sm-3">
+                    <p>
+                        <b>Followees<b>
+                    </p>
+                    <div class="container content userlist row">
+                            
+                        <div class="col">
+                            <img src="image/1.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Sir 1</p>
                         </div>
-                        <p>User 1</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/2.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col">
+                            <img src="image/2.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>His Excellency 2</p>
                         </div>
-                        <p>User 2</p>
-                    </div>
-                    <div class="col-sm-3">
-                        <img src="image/3.jpg">
-                        <div>
-                            <button class="btn btn-default">follow</button>
+                        <div class="col">
+                            <img src="image/5.jpg">
+                            <div>
+                                <button class="btn btn-default">follow</button>
+                            </div>
+                            <p>Professor 3</p>
                         </div>
-                        <p>User 3</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +141,7 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="text-muted">Ofek Twitter</div>
+                <div class="text-muted">Ofek Twitter - with Twitter Bootstrap v4</div>
             </div>
         </footer>
 
