--- a/Html Css/OfekTwitter/signin.html
+++ b/Html Css/OfekTwitter/signin.html
@@ -46,7 +46,7 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="text-muted">Ofek Twitter</div>
+                <div class="text-muted">Ofek Twitter - with Twitter Bootstrap v4</div>
             </div>
         </footer>
 
