--- a/Html Css/OfekTwitter/signup.html
+++ b/Html Css/OfekTwitter/signup.html
@@ -52,7 +52,7 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="text-muted">Ofek Twitter</div>
+                <div class="text-muted">Ofek Twitter - with Twitter Bootstrap v4</div>
             </div>
         </footer>
 
